improve phase feature